Enroll works - authentication almost

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <script src="core-min.js"></script>
   <script src="enc-utf16-min.js"></script>
   <script src="enc-base64-min.js"></script>
+  <script src="cryptoJS.js"></script>
   <script src="sha256.js"></script>
   <script src="core-min.js"></script>
+  <script src="b64.js"></script>
   <script src="main.js"></script>
   <script src="u2f.js"></script>
 
